# AllMyStuffEncoderFraske

./: .editorconfig  .gitattributes  .gitignore  .myownmesh-release-sha256  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  Justfile  LICENSE  PERFORMANCE-ROADMAP.md  README.md  RELEASE-SIGNING.md
.cargo/: config.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  node-check.yml  release.yml
contract-fixtures/: README.md  capability_control.json  capability_screen.json  client_id.json  control_kvm_attach.json  control_kvm_detach.json  control_kvm_mesh_add.json  control_kvm_mesh_remove.json  control_ownership_claim.json  control_ownership_claimed.json  control_ownership_fleetkey.json  control_route_accept.json  control_route_offer_site.json  inventory_summary.json  node_profile_kvm.json  node_profile_kvm_claimable.json  req_capabilities_set.json  req_channel_send_all.json  req_channel_subscribe.json  response_ok.json  server_out_channel_inbound.json  site_advert.json  site_frame_close.json  site_frame_data.json  site_frame_open.json
crates/allmystuff-bridge/: Cargo.toml
crates/allmystuff-bridge/src/: lib.rs  sites.rs
crates/allmystuff-cec-consent/: Cargo.toml
crates/allmystuff-cec-consent/src/: lib.rs  persist.rs
crates/allmystuff-cec-protocol/: Cargo.toml
crates/allmystuff-cec-protocol/src/: ids.rs  lib.rs  media.rs  wire.rs
crates/allmystuff-cli/: Cargo.toml
crates/allmystuff-cli/src/: bridge.rs  gui_launch.rs  main.rs  serve.rs  service.rs
crates/allmystuff-graph/: Cargo.toml
crates/allmystuff-graph/src/: authz.rs  catalog.rs  lib.rs  model.rs
crates/allmystuff-inventory/: Cargo.toml
crates/allmystuff-inventory/src/: dedupe.rs  lib.rs  linux.rs  listening.rs  macos.rs  report.rs  sys.rs  types.rs  windows.rs
crates/allmystuff-mobile-core/: Cargo.toml
crates/allmystuff-mobile-core/src/: caps.rs  connect.rs  control.rs  lib.rs  node.rs  transport.rs
crates/allmystuff-mobile-core/src/media/: files.rs  input.rs  mod.rs  term.rs  video.rs
crates/allmystuff-protocol/: Cargo.toml
crates/allmystuff-protocol/src/: app.rs  control.rs  lib.rs
crates/allmystuff-service/: Cargo.toml
crates/allmystuff-service/src/: lib.rs
crates/allmystuff-session/: Cargo.toml
crates/allmystuff-session/examples/: dump_kvm_fixtures.rs
crates/allmystuff-session/src/: audio.rs  lib.rs  media.rs
crates/allmystuff-term/: Cargo.toml
crates/allmystuff-term/src/: attach.rs  client.rs  lib.rs  main.rs
crates/allmystuff-updater/: Cargo.toml
crates/allmystuff-updater/src/: lib.rs  policy.rs
docs/: AV1-SEAMS.md  EXPERIMENTAL-ARC-PLAN-2026-07.md  INTEGRATION-REPORT-2026-07.md  MOBILE.md  MYOWNMESH-0.3.2-ROLLOUT.md  SMOOTHNESS-IDEAS-2026-07.md  TESTER-KIT-2026-07.md  VIDEO-PIPELINE-PROFILING.md
docs/fork/: ENCODER-PASS-2026-07.md  EXPERIMENTAL-ARC-PLAN-2026-07.md  PIPELINE.md  README.md
gui/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tauri.prototype.conf.json  tsconfig.json  vite.config.ts
gui/mobile/: .gitignore  Cargo.toml  Info.ios.plist  package.json  patch-xcode-project.sh  tauri.conf.json
gui/mobile-mesh/: Cargo.toml
gui/mobile-mesh/src/: lib.rs
gui/mobile/capabilities/: default.json
gui/mobile/ios/: HideKeyboardAccessory.m
gui/mobile/src/: commands.rs  engine.rs  lib.rs  logging.rs  main.rs  mesh.rs
gui/src/: active-region.ts  app.css  catalog.ts  console-touch.ts  fsr1.ts  input-dispatch.ts  input-keys.ts  main.ts  mock.ts  network-phrase.ts  network-settings.ts  promise-rejection.ts  remote-button-tracker.ts  route-handle-state.ts  route-snapshot-state.ts  store.svelte.ts  swipe.ts  tauri.ts  types.ts  venue-settings.ts  venues.ts  video-decoder.ts  webgl-health.ts
gui/src-tauri/: Cargo.toml  Info.plist  build.rs  sidecar_platform.rs  tauri.conf.json
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: README.md  icon.icns
gui/src-tauri/src/: audio.rs  byte_queues.rs  camera_capture.rs  control_client.rs  daemon_spawn.rs  input_dispatch.rs  input_inject.rs  main.rs  mesh.rs  networks_store.rs  ownership.rs  sites.rs  terminal.rs  video.rs  video_decode.rs  wake.rs  wayland_capture.rs  win_capture.rs  window_behavior.rs
gui/src-tauri/tests/: sidecar_platform.rs
gui/src/ui/: AddMachineSheet.svelte  AddNodeModal.svelte  App.svelte  ApprovalsPopup.svelte  BundlesBar.svelte  CecChatWindow.svelte  CecHost.svelte  ClaimSheet.svelte  Console.svelte  ConsoleHost.svelte  ConsoleKeys.svelte  EffectiveReadout.svelte  Files.svelte  FilesHost.svelte  FleetCodePrompt.svelte  Graph.svelte  GroupsBar.svelte  HelpTab.svelte  LayersSheet.svelte  ModePill.svelte  NetworkMenu.svelte  NetworksSheet.svelte  NodeDrawer.svelte  RoomHost.svelte  RoomPanel.svelte  RoomTile.svelte  RoomsBar.svelte  RoomsTab.svelte  (+12 more)
gui/tests/: active-region.test.ts  decoder-stall-evidence.test.ts  input-dispatch.test.ts  input-keys.test.ts  promise-rejection.test.ts  remote-button-tracker.test.ts  route-handle-state.test.ts  route-snapshot-state.test.ts  video-decoder-submission.test.ts  webgl-health.test.ts
node/: Cargo.toml  build.rs
node/.cargo/: config.toml
node/examples/: p2_remote_transport.rs  route_handle_probe.rs  video_prod_probe.rs
node/pixels/: Cargo.toml
node/pixels/src/: lib.rs
node/src/: amf.rs  audio.rs  cec.rs  clipboard.rs  control_client.rs  d3d11va.rs  daemon_spawn.rs  diagnostics.rs  files.rs  gpu_pipeline.rs  hwenc.rs  input_inject.rs  instance.rs  labs.rs  lib.rs  media_policy.rs  mediafoundation.rs  mesh.rs  networks_store.rs  node_control.rs  nvdec.rs  nvenc.rs  os_perf.rs  ownership.rs  persist.rs  pipeline_profile.rs  reboot.rs  shares.rs  sites.rs  telemetry.rs  terminal.rs  video.rs  video_decode.rs  videotoolbox.rs  wake.rs  wayland_capture.rs  win_capture.rs
node/src/stubs/: audio.rs  clipboard.rs  input_inject.rs  terminal.rs  video.rs
scripts/: bootstrap.ps1  bootstrap.sh  bump-version.sh  check-myownmesh-release.ps1  install-amst.ps1  install-amst.sh  install.ps1  install.sh  run-video-profile.ps1  summarize_video_profile.py
(+10 files in other folders)
