[workspace]
resolver = "2"
members = [
    "crates/allmystuff-inventory",
    "crates/allmystuff-graph",
    "crates/allmystuff-protocol",
    "crates/allmystuff-cli",
]
# The Tauri desktop app lives in its own Cargo workspace (`gui/src-tauri`)
# so a `cargo build --workspace` at the root stays fast and webview-free —
# the same split MyOwnMesh uses. The GUI is a *client* of the `myownmesh`
# daemon and of these library crates; it never has to compile to test the
# core.
exclude = ["gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
authors = ["Chris Paul"]
repository = "https://github.com/mrjeeves/AllMyStuff"
description = "Map all your stuff, then wire it together across a mesh you own."

[workspace.dependencies]
allmystuff-inventory = { path = "crates/allmystuff-inventory", version = "0.1.0" }
allmystuff-graph = { path = "crates/allmystuff-graph", version = "0.1.0" }
allmystuff-protocol = { path = "crates/allmystuff-protocol", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Cross-platform host basics (CPU / memory / disks / networks / uptime).
# Pinned to the 0.38 line — 0.39 wants Rust 1.95 and we target 1.88.
sysinfo = "0.38"

[profile.release]
# Match the MyOwnMesh release profile: small, fast-starting binaries that
# ship inside an auto-updating desktop app.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
