[workspace]
resolver = "2"
members = [
    "crates/allmystuff-inventory",
    "crates/allmystuff-graph",
    "crates/allmystuff-protocol",
    "crates/allmystuff-bridge",
    "crates/allmystuff-session",
    "crates/allmystuff-updater",
    "crates/allmystuff-service",
    "crates/allmystuff-cli",
    "crates/allmystuff-term",
    "crates/allmystuff-mobile-core",
    # The CEC Support layer: the pseudo-secret support mesh's wire contract and
    # the customer's three-choice (Once / 3-hours / Forever) consent store. Both
    # are light (serde only), so they live in this fast library workspace and are
    # shared verbatim by the technician side (this app, joined to the support
    # mesh) and by the standalone CEC Support client app.
    "crates/allmystuff-cec-protocol",
    "crates/allmystuff-cec-consent",
]
# The Tauri desktop app (`gui/src-tauri`) and the headless mesh node
# (`node/` — the `allmystuff-node` engine + the `allmystuff-serve` binary)
# each live in their own Cargo workspace so a `cargo build --workspace` at
# the root stays fast and webview-free — the same split MyOwnMesh uses. The
# GUI and the node are *clients* of the `myownmesh` daemon and of these
# library crates; neither has to compile to test the core. (`node` carries
# the heavy media deps — xcap/cpal/openh264/nokhwa/… — so it is deliberately
# kept out of the lightweight library workspace.)
exclude = ["gui", "node"]

[workspace.package]
version = "0.2.24"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
authors = ["Chris Paul"]
repository = "https://github.com/mrjeeves/AllMyStuff"
description = "Map all your stuff, then wire it together across a mesh you own."

[workspace.dependencies]
allmystuff-inventory = { path = "crates/allmystuff-inventory", version = "0.2.24" }
allmystuff-graph = { path = "crates/allmystuff-graph", version = "0.2.24" }
allmystuff-protocol = { path = "crates/allmystuff-protocol", version = "0.2.24" }
allmystuff-bridge = { path = "crates/allmystuff-bridge", version = "0.2.24" }
allmystuff-session = { path = "crates/allmystuff-session", version = "0.2.24" }
allmystuff-updater = { path = "crates/allmystuff-updater", version = "0.2.24" }
allmystuff-service = { path = "crates/allmystuff-service", version = "0.2.24" }
allmystuff-mobile-core = { path = "crates/allmystuff-mobile-core", version = "0.2.24" }
allmystuff-cec-protocol = { path = "crates/allmystuff-cec-protocol", version = "0.2.24" }
allmystuff-cec-consent = { path = "crates/allmystuff-cec-consent", version = "0.2.24" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Cross-platform host basics (CPU / memory / disks / networks / uptime).
# Pinned to the 0.38 line — 0.39 wants Rust 1.95 and we target 1.88.
sysinfo = "0.38"

# Async runtime + HTTP, used by the self-updater (and the mesh session).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Crypto / encoding / archives for the updater.
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "5"

# Compact transport encoding for audio frames over the mesh channel.
base64 = "0.22"

# Terminal client (`amst`): the local-socket transport to the node control
# socket (same crate + version the node binds it with) and cross-platform raw
# mode / terminal size for driving the user's own terminal.
interprocess = { version = "2", features = ["tokio"] }
crossterm = "0.28"

# Test-only.
tempfile = "3"

[profile.release]
# Match the MyOwnMesh release profile: small, fast-starting binaries that
# ship inside an auto-updating desktop app.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
