# The headless mesh node. This is the engine that the desktop GUI's Tauri
# backend used to *be*: presence + the route handshake + every media plane
# (screen / camera / audio / input / terminal / files / clipboard / sites).
# It was lifted out of `gui/src-tauri` so it can run with no webview at all
# — `allmystuff serve` on a headless box — while the GUI links the very same
# code and supplies a Tauri-backed [`UiSink`] for its front-end events.
#
# Its own Cargo workspace (an empty `[workspace]` table) keeps the heavy
# media stack (xcap / cpal / openh264 / nokhwa / opus / …) out of the root
# library workspace, exactly like `gui/` — see the root `Cargo.toml`.
[workspace]

[package]
name = "allmystuff-node"
version = "0.2.46"
description = "AllMyStuff headless mesh node — runs this machine on the mesh (presence + screen/camera/audio/input/terminal/files routes) with no GUI."
authors = ["Chris Paul"]
license = "MIT"
edition = "2021"
rust-version = "1.88.0"

# The engine, linked by both the GUI and the serve binary.
[lib]
name = "allmystuff_node"
path = "src/lib.rs"

# The headless daemon: `allmystuff serve` runs this. Supervises a `myownmesh
# serve` daemon, advertises this machine, and serves its capabilities.
[[bin]]
name = "allmystuff-serve"
path = "src/bin/serve.rs"

# Hardware video encode runs behind one frame-send-tested step-down ladder
# (`video::make_h264_codec`) that falls to software openh264 when no hardware
# encoder produces frames. On Windows the ladder uses Media Foundation (the
# GPU's own H.264 MFT — NVENC/QSV/AMF — via the `windows` crate we already link
# for DXGI capture, so no extra toolchain). The `hwenc` feature below adds the
# FFmpeg vendor encoders for Linux/macOS hosts that opt in.
[features]
# FFmpeg-backed hardware encode (Linux `h264_nvenc`/`h264_vaapi`/`h264_qsv`,
# macOS `h264_videotoolbox`), OFF by default. Requires FFmpeg dev libs +
# pkg-config at build time (Linux: `apt install` the libav* -dev packages;
# macOS: `brew install ffmpeg pkgconf`). It is intentionally NOT on `just
# dev`/`just serve`: a plain build, a viewer-only box, or a Windows host
# (which uses Media Foundation) shouldn't have to install FFmpeg at all.
# Linux/macOS hosts that want vendor HW encode build `--features hwenc`.
#
# The pinned `ffmpeg-next` major must match the FFmpeg the build/runtime machine
# carries — bump it alongside a platform's bundled FFmpeg (the encode code
# itself is version-agnostic). At runtime the ladder still falls back to
# openh264 when no hardware encoder produces frames.
default = ["host"]
hwenc = ["host", "dep:ffmpeg-next"]

# The capture/inject planes — everything that touches THIS machine's screen,
# camera, microphone, speakers, keyboard, PTYs, and OS clipboard. ON by
# default: every desktop/server build wants them. The one build that turns
# them off is iOS (the GUI links the engine `--no-default-features` there):
# the app sandbox has none of these to give — no fork/exec for a PTY, no
# screen grab, no input injection — so each plane module swaps for a same-API
# stub (see `src/stubs/`) and the node becomes a pure *viewer* node. The
# viewer planes (H.264/opus decode, the terminal output queues) are NOT here
# — they stay in every build; watching other machines is the whole point of
# a capture-less node.
host = [
    "audio-io",
    "dep:portable-pty",
    "dep:xcap",
    "dep:jpeg-encoder",
    "dep:enigo",
    "dep:nokhwa",
    "dep:clipboard-rs",
    # …and the per-OS capture underpinnings (see the target tables below):
    # the ScreenCast portal + DPMS on Linux, the IOKit display-sleep
    # assertion on macOS.
    "dep:zbus",
    "dep:pipewire",
    "dep:xcb",
    "dep:core-foundation",
]

# The audio plane alone — split out of `host` because it's the one capture
# plane iOS *can* run: cpal has a CoreAudio backend there, so a capture-less
# phone build adds `audio-io` and gets real playback of inbound streams (and
# a working mic source) while every other plane stays stubbed. `host`
# includes it, so desktop builds are unchanged. libloading rides along for
# the Linux PulseAudio system-audio loopback (target-gated to Linux).
audio-io = ["dep:cpal", "dep:libloading"]

[dependencies]
# Hardware H.264 (and later HEVC/AV1) encode across every vendor behind one
# API — `h264_nvenc` is real NVENC, plus AMF/QSV/VideoToolbox/VA-API. Optional
# so a software-only build needs no FFmpeg toolchain; see the `hwenc` feature.
ffmpeg-next = { version = "6.1", optional = true }

# Async runtime — control-socket client + the media-plane tasks. "process"
# backs the daemon self-update the spawner runs when the installed myownmesh
# is older than the pin; "signal" handles SIGINT/SIGTERM for a clean serve
# shutdown.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process", "signal"] }

# Local IPC: same crate the daemon uses, so control-socket address
# resolution stays identical across both ends of the wire.
interprocess = { version = "2", features = ["tokio"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
parking_lot = "0.12"

# System RNG for minting a fleet's shared key (the owned-roster grouping
# secret).
getrandom = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AllMyStuff's own crates — the scanner, the graph model, the wire types,
# the hardware→capability bridge, the session state machine, and the
# self-updater. Pulled by path from the sibling library workspace.
allmystuff-inventory = { path = "../crates/allmystuff-inventory" }
allmystuff-graph = { path = "../crates/allmystuff-graph" }
allmystuff-protocol = { path = "../crates/allmystuff-protocol" }
allmystuff-bridge = { path = "../crates/allmystuff-bridge" }
allmystuff-session = { path = "../crates/allmystuff-session" }
allmystuff-updater = { path = "../crates/allmystuff-updater" }
# CEC Support: the wire contract (Support-ID derivation, Silent-mesh constants,
# the connect/approve messages) and the customer's per-technician consent store
# (Approve Once / 3 hours / Forever, with per-frame enforcement + revoke).
allmystuff-cec-protocol = { path = "../crates/allmystuff-cec-protocol" }
allmystuff-cec-consent = { path = "../crates/allmystuff-cec-consent" }

# Cross-platform audio capture + playback for the media plane — CoreAudio
# on macOS, WASAPI on Windows, ALSA on Linux.
cpal = { version = "0.15", optional = true }
# Cross-platform PTY for the mesh-native terminal — openpty on Unix, ConPTY
# on Windows — so a terminal session behaves the same across the whole OS
# matrix without an sshd anywhere.
portable-pty = { version = "0.9", optional = true }
# Screen capture (PipeWire / AVFoundation; the in-house DXGI path on
# Windows lives in win_capture.rs).
xcap = { version = "0.9", optional = true }
# `simd` = runtime-detected AVX2 fDCT/color-convert — a multiple of encode
# speed on typical x86-64 desktops, plain safe Rust elsewhere.
jpeg-encoder = { version = "0.7", features = ["simd"], optional = true }
# Keyboard/mouse injection for inbound input/terminal control routes.
enigo = { version = "0.6", optional = true }
# Camera capture for video routes — V4L2 / AVFoundation / Media Foundation.
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
# H.264 encode/decode for the mesh's video track lane (Cisco's encoder,
# built from source). MJPEG stays the fallback.
openh264 = "0.9"
# Opus encode/decode for the mesh's audio track lane (libopus, built from
# source). PCM-over-channel stays the fallback.
opus = "0.3"
# Access units ride the daemon control socket as base64.
base64 = "0.22"
# Verifying a recorded PID is actually a `myownmesh` process before we
# signal it — the self-heal gate that lets us replace *our* orphaned
# daemon without ever touching one we didn't start (and guards PID reuse).
sysinfo = "0.38"
# Cross-platform *rich* clipboard — text, image, and file lists — for the
# clipboard plane. The clipboard-manager bits the GUI used are a webview
# concern and stay in the GUI; this is the OS-clipboard side the node owns.
clipboard-rs = { version = "0.2", optional = true }
# The per-pixel hot loops (frame downscale/strip), split out so dev builds
# optimize them — see the crate's manifest.
allmystuff-pixels = { path = "pixels" }

# `libc::kill` for graceful daemon/node teardown (SIGTERM-then-SIGKILL) and
# for SIGTERM-ing an orphaned daemon we're replacing — needed on every unix,
# macOS included (it has no PR_SET_PDEATHSIG, so this is its only lever).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# PR_SET_PDEATHSIG for the daemon lifetime tie (daemon_spawn). libloading
# dlopens libpulse-simple at runtime for system-audio capture; zbus drives
# the ScreenCast portal (wayland_capture) and the keep-awake inhibitor
# (wake); pipewire consumes the portal's stream; xcb makes the DPMS
# "light the panel" call.
[target.'cfg(target_os = "linux")'.dependencies]
libloading = { version = "0.8", optional = true }
zbus = { version = "5", optional = true }
pipewire = { version = "0.9", optional = true }
xcb = { version = "1", features = ["dpms"], optional = true }

# IOKit power assertions (NoDisplaySleep) while hosting a screen stream.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10", optional = true }

# In-house DXGI Output Duplication for screen capture, the virtual-desktop
# absolute mouse move, and the job-object daemon lifetime tie.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # Media Foundation: the hardware H.264 encoder path (mediafoundation.rs).
    # Drives the GPU's own H.264 MFT (NVENC/QSV/AMF) with no FFmpeg toolchain —
    # MF ships inside Windows itself. Com/Variant back the MFT activation and
    # the ICodecAPI low-latency/force-keyframe knobs.
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    # NVENC SDK backend (nvenc.rs): runtime-loads nvEncodeAPI64.dll.
    "Win32_System_LibraryLoader",
] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    # timeBeginPeriod/timeEndPeriod — the stream's 1 ms timer-resolution
    # guard (os_perf.rs); without it the pacing sleeps quantize at ~15.6 ms.
    "Win32_Media",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Power",
    # GetSystemCpuSetInformation + SYSTEM_CPU_SET_INFORMATION — the hybrid
    # P/E-core detection behind the media threads' CPU-set preference
    # (os_perf.rs).
    "Win32_System_SystemInformation",
    # JOBOBJECT_EXTENDED_LIMIT_INFORMATION (daemon_spawn's kill-on-close job)
    # embeds IO_COUNTERS, which windows-sys gates behind Threading. The GUI
    # workspace got this feature via unification from another dep; the node
    # workspace has to ask for it explicitly.
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
# The Service Control Manager glue so `allmystuff-serve --service` runs as a
# real Windows service: the control dispatcher + status/stop handler the SCM
# requires (a plain console binary would be killed for not answering it). The
# CLI's `allmystuff service install` registers it with `sc.exe`.
windows-service = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The media plane touches every screen pixel every frame; the crates doing
# that work get speed while the rest stays optimized for size — and dev
# builds get the same treatment so a source-run streams at a usable rate.
[profile.release.package.jpeg-encoder]
opt-level = 3
[profile.release.package.openh264]
opt-level = 3
[profile.release.package.openh264-sys2]
opt-level = 3
[profile.release.package.xcap]
opt-level = 3
[profile.release.package.image]
opt-level = 3
[profile.release.package.allmystuff-pixels]
opt-level = 3
[profile.release.package.nokhwa]
opt-level = 3
[profile.release.package.nokhwa-core]
opt-level = 3
[profile.release.package.mozjpeg]
opt-level = 3

[profile.dev.package.jpeg-encoder]
opt-level = 3
[profile.dev.package.openh264]
opt-level = 3
[profile.dev.package.openh264-sys2]
opt-level = 3
[profile.dev.package.xcap]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.allmystuff-pixels]
opt-level = 3
[profile.dev.package.nokhwa]
opt-level = 3
[profile.dev.package.nokhwa-core]
opt-level = 3
[profile.dev.package.mozjpeg]
opt-level = 3
[profile.dev.package.serde_json]
opt-level = 3
[profile.dev.package.base64]
opt-level = 3
