[package]
name = "allmystuff-bridge"
description = "Turns a hardware Inventory into the routable graph Capabilities + presence summary AllMyStuff puts on the mesh. Shared by the CLI and the Tauri backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
allmystuff-inventory = { workspace = true }
allmystuff-graph = { workspace = true }
allmystuff-protocol = { workspace = true }
