[package]
name = "allmystuff-cli"
description = "Headless AllMyStuff — scan this machine and show the capabilities it would expose on the mesh graph."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "allmystuff"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
allmystuff-inventory = { workspace = true }
allmystuff-graph = { workspace = true }
allmystuff-bridge = { workspace = true }
allmystuff-updater = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# `service` installs/queries an OS service (systemd/launchd). Pure-ish path +
# argv builders with rich errors; `dirs` resolves the user's home for the
# unit/plist location.
anyhow = "1"
dirs = "5"
